kubernetes/projects/database/apps/postgresql-launchboard-prerequisites/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgresql-launchboard-pooler-apiserver-access
  namespace: postgresql
  labels:
    app.kubernetes.io/name: postgresql-pooler
    app.kubernetes.io/part-of: postgresql
    home-lab.io/client: launchboard
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/poolerName: postgresql-pooler-launchboard-rw
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
